--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,13 +25,16 @@ html {
 }
 
 body {
+	max-width: 192rem;
+	margin: 0 auto;
 	font-size: 1.8rem;
+	background-color: $color-neutral-1;
 }
 
 main {
 	margin: 4.8rem;
-	@include displayFlex(space-evenly, center);
-	gap: 4.8rem;
+	@include displayFlex(center, center);
+	gap: 9.6rem;
 }
 
 // NAVIGATION
@@ -43,6 +46,49 @@ header {
 	.wrapper-account {
 		@include displayFlex(center, center);
 		gap: 4.8rem;
+	}
+
+	.dropdown .link {
+		@include displayFlex(center, center);
+		gap: 1.2rem;
+	}
+
+	.dropdown-icon {
+		transition: all 0.2s ease;
+	}
+
+	.dropdown-icon--active {
+		transform: rotate(181deg);
+	}
+
+	.dropdown {
+		position: relative;
+	}
+
+	.dropdown-menu {
+		position: absolute;
+		width: max-content;
+		left: 0;
+		top: 3.2rem;
+		background-color: #fff;
+		padding: 2.4rem;
+		border-radius: 1.2rem;
+		box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+		opacity: 0;
+		pointer-events: none;
+
+		transform: translateY(-1.2rem);
+		transition: all 0.2s ease;
+
+		@include displayFlex(center, start);
+		flex-direction: column;
+		gap: 2.4rem;
+	}
+
+	.dropdown-menu.active {
+		opacity: 1;
+		transform: translateY(0);
+		pointer-events: auto;
 	}
 }
 
@@ -78,7 +124,7 @@ header {
 
 // CALL TO ACTION
 .cta-text {
-	max-width: 55rem;
+	max-width: 48rem;
 	@include displayFlex(center, center);
 	flex-direction: column;
 	gap: 4.8rem;
@@ -107,8 +153,9 @@ header {
 }
 
 .wrapper-testimonials {
-	@include displayFlex(flex-start, center);
-	gap: 4.8rem;
+	width: 100%;
+	@include displayFlex(space-between, center);
+	gap: 2.4rem;
 }
 
 .cta-img {
@@ -116,7 +163,23 @@ header {
 
 	img {
 		display: block;
+		width: 100%;
 		max-width: 55rem;
+	}
+}
+
+// BELOW 1050 PX
+@media only screen and (max-width: 65.625em) {
+	main {
+		flex-direction: column-reverse;
+	}
+
+	.cta-text {
+		text-align: center;
+	}
+
+	.link--cta {
+		align-self: center;
 	}
 }
 
