--- a/scss/style.scss
+++ b/scss/style.scss
@@ -218,12 +218,15 @@ header {
 	}
 
 	.mobile-menu--active {
+		z-index: 10;
 		position: absolute;
 		background-color: #fff;
 		padding-top: 9.6rem;
 		padding-left: 4.8rem;
 		width: 30rem;
 		height: 100vh;
+		box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+
 		top: 0;
 		right: 0;
 		flex-direction: column;
